lots of refactoring for generics use, and adding Analyzer classes so that the evaluation logic is not all in GoBoard and GoGroup.